# turtlebot_ws

devel/: .catkin
devel/include/kobuki_msgs/: AutoDockingAction.h  AutoDockingActionFeedback.h  AutoDockingActionGoal.h  AutoDockingActionResult.h  AutoDockingFeedback.h  AutoDockingResult.h  BumperEvent.h  ButtonEvent.h  CliffEvent.h  ControllerInfo.h  DigitalInputEvent.h  DigitalOutput.h  DockInfraRed.h  ExternalPower.h  KeyboardInput.h  Led.h  MotorPower.h  PowerSystemEvent.h  RobotStateEvent.h  ScanAngle.h  SensorState.h  Sound.h  VersionInfo.h  WheelDropEvent.h
devel/include/yocs_msgs/: ARPair.h  ARPairList.h  Column.h  ColumnList.h  DockingInteractorAction.h  DockingInteractorActionFeedback.h  DockingInteractorActionGoal.h  DockingInteractorActionResult.h  DockingInteractorFeedback.h  DockingInteractorGoal.h  DockingInteractorResult.h  JoystickConfig.h  LocalizeAction.h  LocalizeActionFeedback.h  LocalizeActionGoal.h  LocalizeActionResult.h  LocalizeFeedback.h  LocalizeGoal.h  LocalizeResult.h  MagicButton.h  NavigateToAction.h  NavigateToActionFeedback.h  NavigateToActionGoal.h  NavigateToActionResult.h  NavigateToFeedback.h  NavigateToGoal.h  NavigateToResult.h  NavigationControl.h  NavigationControlStatus.h  Table.h  TableList.h  Trajectory.h  TrajectoryList.h  Wall.h  WallList.h  Waypoint.h  WaypointList.h  WaypointListServiceResponse.h
devel/lib/kobuki_keyop/: keyop
devel/lib/pkgconfig/: kobuki_auto_docking.pc  kobuki_bumper2pc.pc  kobuki_capabilities.pc  kobuki_controller_tutorial.pc  kobuki_dashboard.pc  kobuki_description.pc  kobuki_gazebo.pc  kobuki_keyop.pc  (+26 more)
person_detection/: CMakeLists.txt  README.md  package.xml  requirements.txt
person_detection/launch/: person_detection.launch
person_detection/scripts/: main.py
src/turtlebot_person_tracking/: CMakeLists.txt  COMPLETE_GUIDE.md  DEVELOPMENT.md  FIXES.md  NO_MIRROR.md  OBSTACLE_AND_SMOOTH_STOP.md  PERFORMANCE.md  PERSON_LOCK_GUIDE.md  QUICKSTART.md  README.md  SMOOTH_ACCELERATION.md  TERMINAL_WORKFLOW.md  TRACKING_IMPROVEMENTS.md  TUNING_GUIDE.md  package.xml  run_detection.sh
src/turtlebot_person_tracking/launch/: person_tracking.launch
src/turtlebot_person_tracking/scripts/: main.py  main2.py
(+59 files in other folders)
