<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_person_tracking</name>
  <version>1.0.0</version>
  <description>Person detection and tracking using YOLOv8 and RealSense camera</description>

  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>realsense2_camera</depend>

  <export>
  </export>
</package>
